2016-11-07 Thomas Calvet <calvet@cppm.in2p3.fr>
        * Adding automatic binning for background: if shapes are wanted (i.e. Transfo F or D with sig parameter=0) need to specify with samples is used to replace signal (e.g. "AutoBin","TransfoD",paramSig,paramBkg,"smp1","smp2")
        
2016-06-07 Michele Pinamonti <michele.pinamonti@gmail.com>
        * Adding log(S/B) summary plot (use flag PlotSoverB: TRUE in multi-fit congig file)  
        
2016-04-07 Michele Pinamonti <michele.pinamonti@gmail.com>
        * Adding ranking to MultiFit for combined fit
        * Adding an option to order NP in MultiFit for PullPlot (NuisParListFile)
        
2016-03-07 Michele Pinamonti <michele.pinamonti@gmail.com>
        * tagging: 00-02-01
        
2016-07-01 Will Breaden Madden <w.bm@cern.ch>
        * refactor, make more robust and tidy output of run.sh example run script
        
2016-01-07 Michele Pinamonti <michele.pinamonti@gmail.com>
        * fixed yield tables (presence of norm factors was interfering with the sample-by-sample errors)
        * syst tables by category added: use opton Job, SystCategoryTables: TRUE
        * option in config for clean tables: use Job, CleanTables: TRUE
        * safer selection string handling
        
2016-06-29 Will Breaden Madden <w.bm@cern.ch>
        * add run.sh, a simple example run script
        
2016-06-29 Will Breaden Madden <w.bm@cern.ch>
        * minor tidy runAsymptoticCLs.C
        
2016-28-06 Michele Pinamonti <michele.pinamonti@gmail.com>
        * stat-only fit option added (NP fixed to nominal fit values, then data re-fitted): use Fit option fStatOnlyFit (even from copmmand line)
        * fixed Asimov creation for combined fit (in MultiFit)
        * runAsymptoticCLs made faster changing some default options (please change these options back to default in case you want more accurate results)